Fix <hr> elements in dark mode

--- a/assets/_globalCss.css
+++ b/assets/_globalCss.css
@@ -96,7 +96,7 @@ a:active {
 }
 
 hr {
-  border-color: rgba(0 0 0 / 5%);
+  border-color: var(--color-foreground-alpha);
   border-style: solid;
   border-width: 0.5px;
   border-radius: unset;
